Name:          sqroll
Version:       0.0.0.1
Synopsis:      Log to SQLite
Description:   Log to SQLite
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:     2012 Tsuru Capital
category:      Database
build-type:    Simple
cabal-version: >= 1.8

Library
  Hs-source-dirs: src
  Ghc-options:    -Wall

  Exposed-modules:     
    Database.Sqroll
    Database.Sqroll.Internal
    Database.Sqroll.Sqlite3
    Database.Sqroll.Table
    Database.Sqroll.Table.Field
    Database.Sqroll.Table.Generic
    Database.Sqroll.Table.Naming

  Build-depends:
    base       >= 4   && < 5,
    binary     >= 0.5 && < 0.6,
    bytestring >= 0.9 && < 0.11,
    directory  >= 1.1 && < 1.2,
    filepath   >= 1.3 && < 1.4,
    ghc-prim   >= 0.2 && < 0.3,
    mtl        >= 2.0 && < 2.2,
    old-locale >= 1.0 && < 1.1,
    time       >= 1.4 && < 1.5

 Pkgconfig-depends:
   sqlite3

Test-suite sqroll-tests
  Ghc-options:    -Wall
  Hs-source-dirs: src tests
  Main-is:        TestSuite.hs
  Type:           exitcode-stdio-1.0

  Other-modules:
    Database.Sqroll.Sqlite3.Tests
    Database.Sqroll.Table.Naming.Tests
    Database.Sqroll.Tests
    Database.Sqroll.Tests.ModifiedTypes
    Database.Sqroll.Tests.Types

  Build-depends:
    HUnit                >= 1.2 && < 1.3,
    test-framework       >= 0.4 && < 0.7,
    test-framework-hunit >= 0.2 && < 0.3,
    -- Copied from regular dependencies...
    base       >= 4   && < 5,
    binary     >= 0.5 && < 0.6,
    bytestring >= 0.9 && < 0.11,
    directory  >= 1.1 && < 1.2,
    filepath   >= 1.3 && < 1.4,
    ghc-prim   >= 0.2 && < 0.3,
    mtl        >= 2.0 && < 2.2,
    old-locale >= 1.0 && < 1.1,
    time       >= 1.4 && < 1.5

  -- Pkgconfig-depends doesn't seem to work for test suites?
  Extra-libraries:
    sqlite3
