Name:          sqroll
Version:       0.0.0.1
Synopsis:      Log to SQLite
Description:   Log to SQLite
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:     2012 Tsuru Capital
category:      Database
build-type:    Simple
cabal-version: >= 1.8
Extra-source-files: cbits/sqroll.h

Library
  C-sources:      cbits/sqroll.c,
                  cbits/sqlite3.c
  Include-dirs:   cbits
  Includes:       sqlite3.h
  Hs-source-dirs: src
  Ghc-options:    -Wall
  Cc-options:     -Wall -DSQLITE_ENABLE_FTS3=1 -O3 -DNDEBUG=1 -Wno-unused-value

  Exposed-modules:
    Database.Sqroll
    Database.Sqroll.Custom
    Database.Sqroll.Internal
    Database.Sqroll.Pure
    Database.Sqroll.Sqlite3
    Database.Sqroll.Table
    Database.Sqroll.Table.Field
    Database.Sqroll.Table.Generic
    Database.Sqroll.Table.Naming
    Database.Sqroll.TH

  Build-depends:
    base                 >= 4   && < 5,
    bytestring           >= 0.9 && < 0.11,
    directory            >= 1.1 && < 1.3,
    filepath             >= 1.3 && < 1.4,
    ghc-prim             >= 0.2 && < 0.4,
    mtl                  >= 2.0 && < 2.2,
    old-locale           >= 1.0 && < 1.1,
    time                 >= 1.4 && < 1.5,
    unordered-containers >= 0.2 && < 0.3,
    text                 >= 0.11 && < 0.12,
    template-haskell

Test-suite sqroll-tests
  C-sources:      cbits/sqroll.c,
                  cbits/sqlite3.c
  Include-dirs:   cbits
  Ghc-options:    -Wall
  Hs-source-dirs: src tests
  Main-is:        TestSuite.hs
  Type:           exitcode-stdio-1.0

  Other-modules:
    Database.Sqroll.Pure.Tests
    Database.Sqroll.Sqlite3.Tests
    Database.Sqroll.Table.Naming.Tests
    Database.Sqroll.TH.Tests
    Database.Sqroll.Tests
    Database.Sqroll.Tests.ModifiedTypes
    Database.Sqroll.Tests.Types

  Build-depends:
    HUnit                >= 1.2 && < 1.3,
    test-framework       >= 0.4 && < 0.7,
    test-framework-hunit >= 0.2 && < 0.3,
    -- Copied from regular dependencies...
    base                 >= 4   && < 5,
    bytestring           >= 0.9 && < 0.11,
    directory            >= 1.1 && < 1.3,
    filepath             >= 1.3 && < 1.4,
    ghc-prim             >= 0.2 && < 0.4,
    mtl                  >= 2.0 && < 2.2,
    old-locale           >= 1.0 && < 1.1,
    time                 >= 1.4 && < 1.5,
    unordered-containers >= 0.2 && < 0.3,
    text                 >= 0.11 && < 0.12,
    template-haskell
