Name:          sqroll
Version:       0.0.0.6
Synopsis:      Log to SQLite
Description:   Log to SQLite
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:     2012 Tsuru Capital
category:      Database
build-type:    Simple
cabal-version: >= 1.8
Extra-source-files: cbits/sqroll.h


Library
  C-sources:      cbits/sqroll.c
  Include-dirs:   cbits
  pkgconfig-depends: sqlite3
  Hs-source-dirs: src
  Ghc-options:    -Wall
  Cc-options:     -Wall -DSQLITE_ENABLE_FTS3=1 -O3 -DNDEBUG=1 -Wno-unused-value


  Exposed-modules:
    Database.Sqroll
    Database.Sqroll.Flexible
    Database.Sqroll.Internal
    Database.Sqroll.Pure
    Database.Sqroll.Json
    Database.Sqroll.Sqlite3
    Database.Sqroll.Sqlite3Constants
    Database.Sqroll.Table
    Database.Sqroll.Table.Field
    Database.Sqroll.Table.Field.Unique
    Database.Sqroll.Table.Generic
    Database.Sqroll.Table.Naming
    Database.Sqroll.TH

  Build-depends:
    aeson                >= 0.5 && < 1.5,
    base                 >= 4.6 && < 5,
    base64-bytestring    >= 1   && < 2,
    bytestring           >= 0.9 && < 0.11,
    directory            >= 1.1 && < 1.4,
    filepath             >= 1.3 && < 1.5,
    ghc-prim             >= 0.2 && < 0.6,
    lifted-base          >= 0.2 && < 0.3,
    monad-control        >= 0.3 && < 1.1,
    mtl                  >= 2.0 && < 2.4,
    old-locale           >= 1.0 && < 1.1,
    time                 >= 1.4 && < 2,
    transformers-base    >= 0.4 && < 0.5,
    unordered-containers >= 0.2 && < 0.3,
    text                 >= 0.11 && < 1.4,
    template-haskell

Test-suite sqroll-tests
  Ghc-options:    -Wall
  Hs-source-dirs: tests
  Main-is:        TestSuite.hs
  Type:           exitcode-stdio-1.0

  Other-modules:
    Database.Sqroll.Json.Tests
    Database.Sqroll.Pure.Tests
    Database.Sqroll.Sqlite3.Tests
    Database.Sqroll.Table.Naming.Tests
    Database.Sqroll.TH.Tests
    Database.Sqroll.Tests
    Database.Sqroll.Tests.ModifiedTypes
    Database.Sqroll.Tests.Types

  Build-depends:
    sqroll,
    aeson                >= 0.5 && < 1.2,
    base                 >= 4.7 && < 5,
    bytestring           >= 0.9 && < 0.11,
    directory            >= 1.1 && < 1.4,
    filepath             >= 1.3 && < 1.4,
    HUnit                >= 1.2 && < 1.3,
    test-framework       >= 0.4 && < 0.9,
    test-framework-hunit >= 0.2 && < 0.4,
    text                 >= 0.11 && < 1.2

Benchmark sqroll-benchmarks
  Ghc-options:    -Wall
  Hs-source-dirs: benchmarks
  Main-is:        Benchmarks.hs
  Type:           exitcode-stdio-1.0

  Build-depends:
    sqroll,
    base                 >= 4.7   && < 5,
    criterion            >= 0.6 && < 0.7,
    bytestring           >= 0.9 && < 0.11,
    directory            >= 1.1 && < 1.4,
    filepath             >= 1.3 && < 1.4,
    text                 >= 0.11 && < 1.2
